--- a/content/publication/conference-paper/cite.bib
+++ b/content/publication/conference-paper/cite.bib
@@ -1,8 +1,10 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@article{article,
+author = {Cissokho, Youssouph and Kulik, Rafal},
+year = {2021},
+month = {01},
+pages = {},
+title = {Estimation of cluster functionals for regularly varying time series: sliding blocks estimators},
+volume = {15},
+journal = {Electronic Journal of Statistics},
+doi = {10.1214/21-EJS1843}
 }
