--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,10 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{article,
+author = {Cissokho, Youssouph and Kulik, Rafal},
+year = {2021},
+month = {01},
+pages = {},
+title = {Estimation of cluster functionals for regularly varying time series: sliding blocks estimators},
+volume = {15},
+journal = {Electronic Journal of Statistics},
+doi = {10.1214/21-EJS1843}
 }
